# hermeto

./: .containerignore  .dockerignore  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  AI_CONTRIBUTION_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  codecov.yaml  main.py  mkdocs.yml  noxfile.py  pyproject.toml  requirements-build.in  requirements-build.txt  requirements-extras.txt  requirements.txt  tox.ini
.gemini/: styleguide.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: actionlint.yaml  codeql.yaml  dependabot-pipcompile.yml  docs.yaml  gating.yaml  release.yaml
.tekton/: pull-request.yaml  push.yaml  release.yaml  tag-latest.yaml
cachi2/: __init__.py  fib.py  tmp.py
cachi2/core/: config.py  errors.py  resolver.py  rooted_path.py
cachi2/core/models/: output.py  property_semantics.py  sbom.py
cachi2/core/package_managers/: gomod.py  pip.py
cachi2/core/package_managers/bundler/: main.py
cachi2/core/package_managers/cargo/: main.py
cachi2/core/package_managers/generic/: models.py
cachi2/core/package_managers/rpm/: main.py  (+1 more)
cachi2/interface/: cli.py
docs/: bundler.md  cargo.md  configuration.md  dependency_confusion.md  generic.md  gomod.md  index.md  npm.md  pip.md  pnpm.md  rpm.md  sbom.md  usage.md  yarn.md  yarn_classic.md
docs/adr/: 0001-add-generic-fetcher.md  0002-yarn-v4.md
docs/design/: binary-platform-filtering.md  bundler.md  cargo-support.md  conan.md  dnf.md  generic-auth.md  package-manager-template.md  permissive-mode.md  pnpm.md  proxy-support.md  vcpkg.md  yarn-v1.md
hack/mock-unittest-data/: gomod.py  gomod.sh  yarn.py
hack/script/: update_artifacts_lockfile
hermeto/: __init__.py
hermeto/core/: binary_filters.py  checksum.py  config.py  constants.py  errors.py  http_requests.py  resolver.py  rooted_path.py  scm.py  type_aliases.py  utils.py
hermeto/core/extras/: envfile.py
hermeto/core/models/: input.py  output.py  property_semantics.py  sbom.py  validators.py
hermeto/core/package_managers/: common.py  general.py  gomod.py  metayarn.py  npm.py  pip.py  utils.py
hermeto/interface/: cli.py  logging.py
tests/: __init__.py  conftest.py
tests/certificates/: CA.key  server.crt
tests/common_utils/: __init__.py
tests/dnfserver/: README.md  start.sh
tests/dnfserver/certificates/: CA.crt  client.crt  client.key  generate-certs.sh  server.key
tests/integration/: Containerfile.test  conftest.py  container_engine.py  proxy.py  test_bundler.py  test_cargo.py  test_generic.py  test_gomod.py  test_legacy.py  test_maven.py  test_multiple.py  test_npm.py  test_pip.py  test_pnpm.py  test_rpm.py  test_yarn.py  test_yarn_classic.py  utils.py
tests/nexusserver/: README.md  __init__.py  bearer_token  configure.py  docker-compose.yml  htpasswd  nginx.conf  repositories.py  run.sh  start.py
tests/pypiserver/: start.sh
tests/unit/: conftest.py  test_checksum.py  test_cli.py  test_config.py  test_errors.py  test_fib.py  test_logging.py  test_merge_spdx.py  test_resolver.py  test_rooted_path.py  test_scm.py  test_utils.py
tests/unit/extras/: test_envfile.py
tests/unit/models/: test_input.py  test_output.py  test_property_semantics.py  test_sbom.py  test_validators.py
tests/unit/package_managers/: test_general.py  test_generic.py  test_gomod.py  test_maven.py  test_metayarn.py  test_npm.py  test_pip.py  test_rpm.py
(+314 files in other folders)
